Contact us added

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,8 @@
 
       <p>This is the Solien Gallery, a project for COS 333 at Princeton University. We want to help Solien NFT owners show off their coolest Soliens with a custom Twitter banner.</p>
       <p>Enter your wallet number above to get started.</p>
+      
+      <a href="mailto:soliengallery@gmail.com">Contact us at soliengallery@gmail.com!</a>
       <br>
    </center>
 </div>
