--- a/templates/download.html
+++ b/templates/download.html
@@ -23,6 +23,10 @@
       </video>
    </div>
    <div class="content">
-      <h3 style="font-size: 35px;"><a href="{{ url }}">Click Here to View Your Gallery</a></h3>
+      <img src="{{ url }}" class="download-preview">
+      <br>
+      <br>
+      <br>
+      <h3 style="font-size: 35px;"><a href="{{ url }}">Click Here to Download Image</a></h3>
    </div>
 </div>
