--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -272,8 +272,9 @@
                   alt="1">
                
                  
-                 <img src="https://thelifeofsammiiejayyy.com/wp-content/uploads/2019/11/Purple-Space-Twitter-Header.jpg" 
+                 <img src= "https://www.setaswall.com/wp-content/uploads/2017/11/Twitter-Cover-Photo-24-1500x500.jpg"
                  alt="2">
+                 <!-- "https://thelifeofsammiiejayyy.com/wp-content/uploads/2019/11/Purple-Space-Twitter-Header.jpg" -->
                <input type="color" id="colorpicker" value="#ffffff" onchange="updateBackground()" onclick="updateBackground()">
                <button onclick="enqueueGallery()">Create</button>
             </div>
