--- a/templates/error.html
+++ b/templates/error.html
@@ -14,7 +14,7 @@
       </video>
    </div>
    <div class="content">
-      <h3><strong>Error</strong>: {{error_message}}</h3>
+      <h3>{{error_message}}</h3>
       <h3><a href="/">Click here to start again.</a></h3>
    </div>
 </div>
