--- a/static/styles/gallery_style.css
+++ b/static/styles/gallery_style.css
@@ -96,13 +96,8 @@ input[type=color] {
    margin-bottom:20px;
   /* border-radius: 5px;*/
    transition: .95s ease;
-   cursor: move;
+   cursor: pointer;
 }
-
-.nft-not-in-gal.dragging {
-  opacity: .5;
-}
-
 
 .nft-in-gal {
    max-height: calc(var(--height) * var(--nft-factor));
