Open loading page for gallery image in a new tab

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -9,7 +9,7 @@
    let bgtype;
 
    function redirectPage(job_id) {
-      window.location.href = "/loading/download/" + job_id;
+      window.open("/loading/download/" + job_id, "_blank");
    }
 
    // Enqueues the creation of a gallery
