--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,10 @@
             </tr>
          </table>
       </center>
+      <br>
+      <br>
+      <h4>About Us</h4>
+      <i class="arrow downarrow"> </i>
    </div>
 </div>
 <div class="about">
@@ -65,7 +69,7 @@
       <br>
 
       <p>This is the Solien Gallery, a project for COS 333 at Princeton University. We want to help Solien NFT owners show off their coolest Soliens with a custom Twitter banner.</p>
-      <p>Enter your wallet number above to get started.</p>
+      <p>Enter your wallet address above to get started.</p>
 
       <a href="mailto:soliengallery@gmail.com">Contact us at soliengallery@gmail.com!</a>
       <br>
