changed text of input in index.html to Enter Wallet Address...

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
       <center>
          <table>
             <tr>
-               <td><br><input type="text" id="wallet" placeholder="Wallet Address"></td>
+               <td><br><input type="text" id="wallet" placeholder="Enter Wallet Address..."></td>
                <td style="padding: 10px"></td>
                <td><button onclick="enqueueSearch()">Search</button></td>
             </tr>
