Adding eAdding example wallet to index

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -192,7 +192,7 @@
                   alt="1">
 
 
-                 <img src= "https://www.setaswall.com/wp-content/uploads/2017/11/Twitter-Cover-Photo-24-1500x500.jpg"
+                 <img src= "https://wc.wallpaperuse.com/wallp/59-595920_s.png"
                  alt="2">
                  <!-- "https://thelifeofsammiiejayyy.com/wp-content/uploads/2019/11/Purple-Space-Twitter-Header.jpg" -->
                <input type="color" id="colorpicker" value="#ffffff" onchange="updateBackgroundColor()" onclick="updateBackgroundColor()">
